maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:11: error: illegal start of simple expression
    }
    ^